--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -49,145 +49,157 @@ jobs:
           }
           
           async function loginAndBrowse(loginUrl, browseUrl, username, password) {
-            console.log("Launching browser...");
-            const browser = await puppeteer.launch({
-              headless: "new",
-              args: [
-                '--no-sandbox',
-                '--disable-setuid-sandbox'
-              ]
-            });
-            const page = await browser.newPage();
-          
-            // Stage 1: Navigate to the login page.
-            console.log("Navigating to login page:", loginUrl);
-            await page.goto(loginUrl, { waitUntil: 'networkidle2', timeout: 60000 });
-            await safeScreenshot(page, `./screenshots/pubby_home_${Date.now()}.png`);
-          
-            // Stage 2: Fill in the login form.
-            console.log("Filling in login credentials...");
-            await page.type('input[name="email"]', username, { delay: 100 });
-            await page.type('input[name="password"]', password, { delay: 100 });
-            await safeScreenshot(page, `./screenshots/pubby_credentials_filled_${Date.now()}.png`);
-          
-            // Stage 3: Submit the login form.
-            console.log("Clicking the login button...");
-            await Promise.all([
-              page.waitForNavigation({ waitUntil: 'networkidle2', timeout: 60000 }),
-              page.click('button[type="submit"]')
-            ]);
-            await safeScreenshot(page, `./screenshots/pubby_after_login_${Date.now()}.png`);
-          
-            // Stage 4: Verify login status.
-            console.log("Verifying login status...");
-            const dashboard = await page.$('a.logout, .dashboard');
-            if (dashboard) {
-              console.log("Login successful.");
-            } else {
-              console.warn("Login may have failed. Dashboard element not found.");
-              await safeScreenshot(page, `./screenshots/pubby_login_failed_${Date.now()}.png`);
-            }
-          
-            // Stage 5: Navigate to the browse page.
-            console.log("Navigating to browse page:", browseUrl);
-            await page.goto(browseUrl, { waitUntil: 'networkidle2', timeout: 60000 });
-            await safeScreenshot(page, `./screenshots/pubby_browse_${Date.now()}.png`);
-          
-            // Extra wait to ensure dynamic content loads.
-            console.log("Waiting for dynamic content to load...");
-            await sleep(3000);
-          
-            // Stage 6: Extract Recommended Books.
-            console.log("Extracting Recommended Books...");
-            const recommendedBooks = await page.evaluate(() => {
-              const books = [];
-              document.querySelectorAll('.pages-container .page-label').forEach(label => {
-                const titleElement = label.querySelector('.page-label-text span') || label.querySelector('.page-label-text');
-                if (titleElement && titleElement.innerText.trim().length > 0) {
-                  books.push(titleElement.innerText.trim());
-                }
+            let browser, page;
+            try {
+              console.log("Launching browser...");
+              browser = await puppeteer.launch({
+                headless: "new",
+                args: [
+                  '--no-sandbox',
+                  '--disable-setuid-sandbox'
+                ]
               });
-              return books;
-            });
-            console.log("Recommended Books:", recommendedBooks);
-            await safeScreenshot(page, `./screenshots/pubby_books_extracted_${Date.now()}.png`);
+              page = await browser.newPage();
           
-            // Stage 7: Extract Activity Timeline.
-            console.log("Extracting Activity Timeline...");
-            const activityTimeline = await page.evaluate(() => {
-              const events = [];
-              document.querySelectorAll('.timeline .event').forEach(event => {
-                const contentEl = event.querySelector('.content');
-                const timeEl = event.querySelector('.time');
-                events.push({
-                  content: contentEl ? contentEl.innerText.trim() : '',
-                  time: timeEl ? timeEl.innerText.trim() : ''
-                });
-              });
-              return events;
-            });
-            console.log("Activity Timeline:", activityTimeline);
-            await safeScreenshot(page, `./screenshots/pubby_activity_extracted_${Date.now()}.png`);
+              // Stage 1: Navigate to the login page.
+              console.log("Navigating to login page:", loginUrl);
+              await page.goto(loginUrl, { waitUntil: 'networkidle2', timeout: 60000 });
+              await safeScreenshot(page, `./screenshots/pubby_home_${Date.now()}.png`);
           
-            // Stage 8: Find a free book card, click it, then click "Pick Book".
-            console.log("Scanning for free book cards...");
-            const freeCardHandle = await page.evaluateHandle((xpath) => {
-              const results = [];
-              const query = document.evaluate(xpath, document, null, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null);
-              for (let i = 0; i < query.snapshotLength; i++) {
-                results.push(query.snapshotItem(i));
+              // Stage 2: Fill in the login form.
+              console.log("Filling in login credentials...");
+              await page.type('input[name="email"]', username, { delay: 100 });
+              await page.type('input[name="password"]', password, { delay: 100 });
+              await safeScreenshot(page, `./screenshots/pubby_credentials_filled_${Date.now()}.png`);
+          
+              // Stage 3: Submit the login form.
+              console.log("Clicking the login button...");
+              await Promise.all([
+                page.waitForNavigation({ waitUntil: 'networkidle2', timeout: 60000 }),
+                page.click('button[type="submit"]')
+              ]);
+              await safeScreenshot(page, `./screenshots/pubby_after_login_${Date.now()}.png`);
+          
+              // Stage 4: Verify login status.
+              console.log("Verifying login status...");
+              const dashboard = await page.$('a.logout, .dashboard');
+              if (dashboard) {
+                console.log("Login successful.");
+              } else {
+                console.warn("Login may have failed. Dashboard element not found.");
+                await safeScreenshot(page, `./screenshots/pubby_login_failed_${Date.now()}.png`);
               }
-              return results;
-            }, "//div[contains(@class, 'card') and .//div[contains(@class, 'free')] and contains(., 'Free Download')]");
-            const freeCardProps = await freeCardHandle.getProperties();
-            const freeCardElements = [];
-            for (const property of freeCardProps.values()) {
-              const element = property.asElement();
-              if (element)
-                freeCardElements.push(element);
-            }
-            if (freeCardElements.length > 0) {
-              console.log("Free book card found. Clicking the card...");
-              await freeCardElements[0].click();
-              await sleep(2000); // Wait for card details to load.
-              await safeScreenshot(page, `./screenshots/pubby_free_card_clicked_${Date.now()}.png`);
           
-              console.log("Looking for 'Pick Book' button...");
-              const pickBookHandle = await page.evaluateHandle((xpath) => {
+              // Stage 5: Navigate to the browse page.
+              console.log("Navigating to browse page:", browseUrl);
+              await page.goto(browseUrl, { waitUntil: 'networkidle2', timeout: 60000 });
+              await safeScreenshot(page, `./screenshots/pubby_browse_${Date.now()}.png`);
+          
+              // Extra wait to ensure dynamic content loads.
+              console.log("Waiting for dynamic content to load...");
+              await sleep(3000);
+          
+              // Stage 6: Extract Recommended Books.
+              console.log("Extracting Recommended Books...");
+              const recommendedBooks = await page.evaluate(() => {
+                const books = [];
+                document.querySelectorAll('.pages-container .page-label').forEach(label => {
+                  const titleElement = label.querySelector('.page-label-text span') || label.querySelector('.page-label-text');
+                  if (titleElement && titleElement.innerText.trim().length > 0) {
+                    books.push(titleElement.innerText.trim());
+                  }
+                });
+                return books;
+              });
+              console.log("Recommended Books:", recommendedBooks);
+              await safeScreenshot(page, `./screenshots/pubby_books_extracted_${Date.now()}.png`);
+          
+              // Stage 7: Extract Activity Timeline.
+              console.log("Extracting Activity Timeline...");
+              const activityTimeline = await page.evaluate(() => {
+                const events = [];
+                document.querySelectorAll('.timeline .event').forEach(event => {
+                  const contentEl = event.querySelector('.content');
+                  const timeEl = event.querySelector('.time');
+                  events.push({
+                    content: contentEl ? contentEl.innerText.trim() : '',
+                    time: timeEl ? timeEl.innerText.trim() : ''
+                  });
+                });
+                return events;
+              });
+              console.log("Activity Timeline:", activityTimeline);
+              await safeScreenshot(page, `./screenshots/pubby_activity_extracted_${Date.now()}.png`);
+          
+              // Stage 8: Find a free book card, click it, then click "Pick Book".
+              console.log("Scanning for free book cards...");
+              const freeCardHandle = await page.evaluateHandle((xpath) => {
                 const results = [];
                 const query = document.evaluate(xpath, document, null, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null);
                 for (let i = 0; i < query.snapshotLength; i++) {
                   results.push(query.snapshotItem(i));
                 }
                 return results;
-              }, "//div[contains(@class, 'action') and contains(@class, 'action-blue') and normalize-space(text())='Pick Book']");
-              const pickBookProps = await pickBookHandle.getProperties();
-              const pickBookElements = [];
-              for (const property of pickBookProps.values()) {
+              }, "//div[contains(@class, 'card') and .//div[contains(@class, 'free')] and contains(., 'Free Download')]");
+              const freeCardProps = await freeCardHandle.getProperties();
+              const freeCardElements = [];
+              for (const property of freeCardProps.values()) {
                 const element = property.asElement();
                 if (element)
-                  pickBookElements.push(element);
+                  freeCardElements.push(element);
               }
-              if (pickBookElements.length > 0) {
-                console.log("'Pick Book' button found. Clicking...");
-                await pickBookElements[0].click();
-                await sleep(2000);
-                await safeScreenshot(page, `./screenshots/pubby_pick_book_clicked_${Date.now()}.png`);
+              if (freeCardElements.length > 0) {
+                console.log("Free book card found. Clicking the card...");
+                await freeCardElements[0].click();
+                await sleep(2000); // Wait for card details to load.
+                await safeScreenshot(page, `./screenshots/pubby_free_card_clicked_${Date.now()}.png`);
+          
+                console.log("Looking for 'Pick Book' button...");
+                const pickBookHandle = await page.evaluateHandle((xpath) => {
+                  const results = [];
+                  const query = document.evaluate(xpath, document, null, XPathResult.ORDERED_NODE_SNAPSHOT_TYPE, null);
+                  for (let i = 0; i < query.snapshotLength; i++) {
+                    results.push(query.snapshotItem(i));
+                  }
+                  return results;
+                }, "//div[contains(@class, 'action') and contains(@class, 'action-blue') and normalize-space(text())='Pick Book']");
+                const pickBookProps = await pickBookHandle.getProperties();
+                const pickBookElements = [];
+                for (const property of pickBookProps.values()) {
+                  const element = property.asElement();
+                  if (element)
+                    pickBookElements.push(element);
+                }
+                if (pickBookElements.length > 0) {
+                  console.log("'Pick Book' button found. Clicking...");
+                  await pickBookElements[0].click();
+                  await sleep(2000);
+                  await safeScreenshot(page, `./screenshots/pubby_pick_book_clicked_${Date.now()}.png`);
+                } else {
+                  console.log("'Pick Book' button not found after clicking the free book card.");
+                }
               } else {
-                console.log("'Pick Book' button not found after clicking the free book card.");
+                console.log("No free book card found.");
               }
-            } else {
-              console.log("No free book card found.");
+            } catch (error) {
+              console.error("Script error:", error.message);
+            } finally {
+              // Stage 9: Always save the final HTML of the browse page.
+              if (page) {
+                try {
+                  console.log("Saving final HTML of the browse page...");
+                  const finalHtml = await page.content();
+                  const htmlFile = `./screenshots/pubby_final_page_${Date.now()}.html`;
+                  fs.writeFileSync(htmlFile, finalHtml);
+                  console.log(`Final HTML saved: ${htmlFile}`);
+                } catch (e) {
+                  console.error("Failed to save final HTML:", e.message);
+                }
+              }
+              if (browser) {
+                await browser.close();
+              }
             }
-          
-            // Stage 9: Save final HTML of the browse page.
-            console.log("Saving final HTML of the browse page...");
-            const finalHtml = await page.content();
-            const htmlFile = `./screenshots/pubby_final_page_${Date.now()}.html`;
-            fs.writeFileSync(htmlFile, finalHtml);
-            console.log(`Final HTML saved: ${htmlFile}`);
-          
-            await browser.close();
           }
           
           async function run() {
