--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -95,10 +95,10 @@ jobs:
               await page.goto(browseUrl, { waitUntil: 'networkidle2', timeout: 60000 });
               await safeScreenshot(page, `./screenshots/pubby_browse_${Date.now()}.png`);
           
-              // Wait for the library-loading indicator to disappear.
-              console.log("Waiting for library recommendations to load...");
-              await page.waitForSelector('.library-loading', { hidden: true, timeout: 30000 });
-              console.log("Library recommendations loaded.");
+              // Wait for the books container to be visible.
+              console.log("Waiting for the books container to appear...");
+              await page.waitForSelector('.library-books-container', { visible: true, timeout: 30000 });
+              console.log("Books container loaded.");
               await safeScreenshot(page, `./screenshots/pubby_browse_loaded_${Date.now()}.png`);
           
               // Stage 6: Extract Recommended Books.
