--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -30,14 +30,14 @@ jobs:
           const puppeteer = require('puppeteer-extra');
           const StealthPlugin = require('puppeteer-extra-plugin-stealth');
           const fs = require('fs');
-          
+
           puppeteer.use(StealthPlugin());
-          
+
           // Helper sleep function.
           function sleep(ms) {
             return new Promise(resolve => setTimeout(resolve, ms));
           }
-          
+
           // Helper function to safely take a screenshot.
           async function safeScreenshot(page, path) {
             try {
@@ -47,7 +47,7 @@ jobs:
               console.error(`Failed to take screenshot ${path}: ${err.message}`);
             }
           }
-          
+
           async function loginAndBrowse(loginUrl, browseUrl, username, password) {
             let browser, page;
             try {
@@ -60,18 +60,18 @@ jobs:
                 ]
               });
               page = await browser.newPage();
-          
+
               // Stage 1: Navigate to the login page.
               console.log("Navigating to login page:", loginUrl);
               await page.goto(loginUrl, { waitUntil: 'networkidle2', timeout: 60000 });
               await safeScreenshot(page, `./screenshots/pubby_home_${Date.now()}.png`);
-          
+
               // Stage 2: Fill in the login form.
               console.log("Filling in login credentials...");
               await page.type('input[name="email"]', username, { delay: 100 });
               await page.type('input[name="password"]', password, { delay: 100 });
               await safeScreenshot(page, `./screenshots/pubby_credentials_filled_${Date.now()}.png`);
-          
+
               // Stage 3: Submit the login form.
               console.log("Clicking the login button...");
               await Promise.all([
@@ -79,7 +79,7 @@ jobs:
                 page.click('button[type="submit"]')
               ]);
               await safeScreenshot(page, `./screenshots/pubby_after_login_${Date.now()}.png`);
-          
+
               // Stage 4: Verify login status.
               console.log("Verifying login status...");
               const dashboard = await page.$('a.logout, .dashboard');
@@ -89,19 +89,33 @@ jobs:
                 console.warn("Login may have failed. Dashboard element not found.");
                 await safeScreenshot(page, `./screenshots/pubby_login_failed_${Date.now()}.png`);
               }
-          
+
               // Stage 5: Navigate to the browse page.
               console.log("Navigating to browse page:", browseUrl);
               await page.goto(browseUrl, { waitUntil: 'networkidle2', timeout: 60000 });
               await safeScreenshot(page, `./screenshots/pubby_browse_${Date.now()}.png`);
-          
+
               // Wait for the books container to be visible.
               console.log("Waiting for the books container to appear...");
-              await page.waitForSelector('.library-books-container', { visible: true, timeout: 30000 });
+              await page.waitForSelector('.library-books-container', { visible: true, timeout: 60000 });
               console.log("Books container loaded.");
               await safeScreenshot(page, `./screenshots/pubby_browse_loaded_${Date.now()}.png`);
-          
-              // Stage 6: Extract Recommended Books.
+
+              // Extended wait to ensure books truly load
+              console.log("Extended wait for content...");
+              await sleep(5000);
+
+              // Stage 6: Scroll down multiple times to load more books
+              for (let i = 0; i < 3; i++) {
+                console.log(`Scrolling down, iteration ${i+1}`);
+                await page.evaluate(() => {
+                  window.scrollBy(0, window.innerHeight);
+                });
+                await sleep(3000);
+                await safeScreenshot(page, `./screenshots/pubby_scroll_${i+1}_${Date.now()}.png`);
+              }
+
+              // Stage 7: Extract Recommended Books.
               console.log("Extracting Recommended Books...");
               const recommendedBooks = await page.evaluate(() => {
                 const books = [];
@@ -115,8 +129,8 @@ jobs:
               });
               console.log("Recommended Books:", recommendedBooks);
               await safeScreenshot(page, `./screenshots/pubby_books_extracted_${Date.now()}.png`);
-          
-              // Stage 7: Extract Activity Timeline.
+
+              // Stage 8: Extract Activity Timeline.
               console.log("Extracting Activity Timeline...");
               const activityTimeline = await page.evaluate(() => {
                 const events = [];
@@ -132,8 +146,8 @@ jobs:
               });
               console.log("Activity Timeline:", activityTimeline);
               await safeScreenshot(page, `./screenshots/pubby_activity_extracted_${Date.now()}.png`);
-          
-              // Stage 8: Find a free book card, click it, then click "Pick Book".
+
+              // Stage 9: Find a free book card, click it, then click "Pick Book".
               console.log("Scanning for free book cards...");
               const freeCardHandle = await page.evaluateHandle((xpath) => {
                 const results = [];
@@ -155,7 +169,7 @@ jobs:
                 await freeCardElements[0].click();
                 await sleep(2000); // Wait for card details to load.
                 await safeScreenshot(page, `./screenshots/pubby_free_card_clicked_${Date.now()}.png`);
-          
+
                 console.log("Looking for 'Pick Book' button...");
                 const pickBookHandle = await page.evaluateHandle((xpath) => {
                   const results = [];
@@ -186,7 +200,7 @@ jobs:
             } catch (error) {
               console.error("Script error:", error.message);
             } finally {
-              // Stage 9: Always save the final HTML of the browse page.
+              // Always save final HTML of the browse page.
               if (page) {
                 try {
                   console.log("Saving final HTML of the browse page...");
@@ -203,20 +217,20 @@ jobs:
               }
             }
           }
-          
+
           async function run() {
             const loginUrl = process.env.PUBBY_LOGIN_URL || "https://account.pubby.co/login";
             const browseUrl = process.env.PUBBY_BROWSE_URL || "https://app.pubby.co/#/browse";
             const username = process.env.PUBBY_USERNAME;
             const password = process.env.PUBBY_PASSWORD;
-          
+
             if (!username || !password) {
               console.error("Username and password must be provided via environment variables.");
               process.exit(1);
             }
             await loginAndBrowse(loginUrl, browseUrl, username, password);
           }
-          
+
           run().catch(error => {
             console.error("Script failed:", error.message);
             process.exit(1);
