--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -93,8 +93,6 @@ jobs:
               // Stage 5: Navigate to the browse page.
               console.log("Navigating to browse page:", browseUrl);
               await page.goto(browseUrl, { waitUntil: 'networkidle2', timeout: 60000 });
-              // Wait for 10 seconds before making pubby browse screenshot.
-              await sleep(10000);
               await safeScreenshot(page, `./screenshots/pubby_browse_${Date.now()}.png`);
 
               // Stage 5.5: Click the free filter button with increased verbosity.
@@ -132,7 +130,7 @@ jobs:
 
               // Stage 6: Wait for the books container to be visible.
               console.log("Waiting for the books container to appear...");
-              await page.waitForSelector('.library-books-container', { visible: true, timeout: 60000 });
+              await page.waitForSelector('.library-books-container, .pages-container', { visible: true, timeout: 60000 });
               console.log("Books container loaded.");
               await safeScreenshot(page, `./screenshots/pubby_browse_loaded_${Date.now()}.png`);
 
@@ -154,6 +152,7 @@ jobs:
               console.log("Extracting Recommended Books...");
               const recommendedBooks = await page.evaluate(() => {
                 const books = [];
+                // Extract from page labels.
                 document.querySelectorAll('.pages-container .page-label').forEach(label => {
                   const titleElement = label.querySelector('.page-label-text span') || label.querySelector('.page-label-text');
                   if (titleElement && titleElement.innerText.trim().length > 0) {
@@ -162,7 +161,23 @@ jobs:
                 });
                 return books;
               });
-              console.log("Recommended Books:", recommendedBooks);
+              console.log("Books from page labels:", recommendedBooks);
+
+              // Additionally, check for a free book card in the assignment section.
+              const freeBook = await page.evaluate(() => {
+                const card = document.querySelector('.card.single');
+                if (card) {
+                  const title = card.querySelector('.title .title-text')?.innerText.trim() || '';
+                  const subtitle = card.querySelector('.title .subtitle-text')?.innerText.trim() || '';
+                  return title ? (subtitle ? `${title}: ${subtitle}` : title) : null;
+                }
+                return null;
+              });
+              if (freeBook && !recommendedBooks.includes(freeBook)) {
+                console.log("Free book card detected:", freeBook);
+                recommendedBooks.unshift(freeBook);
+              }
+              console.log("Final Recommended Books:", recommendedBooks);
               await safeScreenshot(page, `./screenshots/pubby_books_extracted_${Date.now()}.png`);
 
               // Stage 9: Extract Activity Timeline.
