--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -130,7 +130,7 @@ jobs:
 
               // Stage 6: Wait for the books container to be visible.
               console.log("Waiting for the books container to appear...");
-              await page.waitForSelector('.library-books-container, .pages-container', { visible: true, timeout: 60000 });
+              await page.waitForSelector('.library-books-container', { visible: true, timeout: 60000 });
               console.log("Books container loaded.");
               await safeScreenshot(page, `./screenshots/pubby_browse_loaded_${Date.now()}.png`);
 
@@ -180,7 +180,7 @@ jobs:
               console.log("Final Recommended Books:", recommendedBooks);
               await safeScreenshot(page, `./screenshots/pubby_books_extracted_${Date.now()}.png`);
 
-              // Stage 9: Extract Activity Timeline.
+              // Stage 9: Extract Activity Timeline (using the original selector).
               console.log("Extracting Activity Timeline...");
               const activityTimeline = await page.evaluate(() => {
                 const events = [];
